feat: book an appointment

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
 
   --color-bg-default: #f1f8ff;
   --color-bg-paper: #ffffff;
+  --color-bg-input: #f4f6f6;
   --color-bg-tag: #f6f1f1;
   --color-bg-success: #dbfce7;
   --color-bg-error: #ffe1e1;
